fix: font and spacing

--- a/express/styles/styles.css
+++ b/express/styles/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'adobe-clean', 'Adobe Clean';
+    font-family: 'adobe-clean', 'Adobe Clean', sans-serif;
     background-color: #FFF;
     color: #232323;
     margin: 0;
@@ -409,6 +409,15 @@ main .section-wrapper h3 {
     margin: 0;
     font-weight: 800;
 }
+
+main .section-wrapper > div > h3  {
+  margin-top: 64px;
+}
+
+main .section-wrapper > div > h3:first-child  {
+  margin-top: 0px;
+}
+
 
 main .section-wrapper * + h2 {
     margin-top: 64px;
